# 301-Week1-ML-project-kevivois

./: README.md  config.yaml  pyproject.toml
data/raw/: DATACARD_fuel_consumption.md  DATACARD_maisons.md  fuel_consumption.csv  maisons.csv
notebooks/: mini_lab_1_fuel_consumption.html  mini_lab_1_fuel_consumption.ipynb  notebook.py
reports/: custom-styles.scss
reports/presentation_project1/: presentation.qmd
reports/report_kevivois/: presentation.html  presentation.ipynb  presentation.qmd
src/isc301/: config.py  readme.md  training.py
